--- a/style/scss/_global settings.scss
+++ b/style/scss/_global settings.scss
@@ -31,7 +31,7 @@ a {
 
 .big-title {
   font-size: 3em;
-  opacity: 0.4;
+  opacity: 0.8;
   text-align: center;
   text-transform: uppercase;
   font-family: var(--sub-font);
