--- a/style/scss/_section-4.scss
+++ b/style/scss/_section-4.scss
@@ -16,17 +16,6 @@
         position: relative;
         max-height: 300px;
         overflow: hidden;
-        // .div-border {
-        //   width: 100%;
-        //   height: 300px;
-        //   background-color: transparent;
-        //   border-left: 5px solid rgb(76, 245, 84);
-        //   z-index: 6;
-        //   position: absolute;
-        //   top: 0;
-        //   left: 0;
-        //   animation: movingB 5s linear infinite;
-        // }
         @keyframes movingB {
           0% {
             transform: rotate(0);
@@ -65,6 +54,16 @@
           justify-content: center;
           font-family: var(--sub-font);
           border-radius: 10px;
+          @include breakPoints(mobile) {
+            height: max-content;
+            display: flex;
+            min-height: 50%;
+          }
+          @include breakPoints(small) {
+            height: max-content;
+            display: flex;
+            min-height: 30%;
+          }
         }
       }
     }
